--- a/views/admin/admin_books_list.ejs
+++ b/views/admin/admin_books_list.ejs
@@ -151,14 +151,14 @@
                         </select>
                     </div>
 
-                    <div class="md:w-1/5 min-w-0">
+                    <!-- <div class="md:w-1/5 min-w-0">
                         <select name="matchType" class="w-full p-2.5 bg-gray-50 border border-gray-300 rounded-lg">
                             <option value="contains" <%= query.matchType === 'contains' ? 'selected' : '' %>>Salah Satu Isi</option>
                             <option value="startsWith" <%= query.matchType === 'startsWith' ? 'selected' : '' %>>Dimulai Dengan</option>
                             <option value="endsWith" <%= query.matchType === 'endsWith' ? 'selected' : '' %>>Diakhiri Dengan</option>
                             <option value="exact" <%= query.matchType === 'exact' ? 'selected' : '' %>>Tepat (Exact)</option>
                         </select>
-                    </div>
+                    </div> -->
 
                     <div class="min-w-0">
                         <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-2.5 rounded-lg font-bold w-full md:w-auto transition shadow-sm">
