--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -255,7 +255,7 @@
                                             </select>
                                         </div>
 
-                                        <div class="md:w-44">
+                                        <!-- <div class="md:w-44">
                                             <select name="matchType"
                                                 class="w-full py-2.5 px-3 bg-white border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-sm">
                                                 <option value="contains" <%=query.matchType==='contains' ? 'selected'
@@ -267,7 +267,7 @@
                                                 <option value="exact" <%=query.matchType==='exact' ? 'selected' : '' %>
                                                     >Tepat (Exact)</option>
                                             </select>
-                                        </div>
+                                        </div> -->
                                     </div>
 
                                     <div class="w-full md:w-auto">
